Update to Jekyll 4.1

--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,8 @@ url: "http://www.orbitale.io"
 twitter_username: pierstoval
 github_username:  pierstoval
 
+author: Alex Rock
+
 # Build settings
 markdown: kramdown
 theme: minima
