--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
     jekyll:
-        image: jekyll/jekyll:3.8
+        image: jekyll/minimal:4
         volumes:
           - ./:/srv/jekyll:delegated
           - ./vendor/bundle:/usr/local/bundle
