--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,4 +8,8 @@ services:
           - ./vendor/bundle:/usr/local/bundle
         ports:
           - '4000:4000'
-        command: bundle exec jekyll serve --watch --force_polling --incremental -H 0.0.0.0
+        command: >
+            bash -c "
+                bundle install &&
+                bundle exec jekyll serve --watch --force_polling --incremental -H 0.0.0.0
+            "
